@@ -11,6 +11,7 @@ CVS HEAD           Bugfix: _lscp_client_evt_proc() dropped LSCP events.
 
                    Added support for new (un)subscribable events:
                      LSCP_EVENT_CHANNEL_MIDI
+                     LSCP_EVENT_DEVICE_MIDI
                    Caution: the bitflag approach for the event variable
                    is now abondoned, since otherwise we would soon hit the
                    limit of the bit range. The bitflag approach will
